--- a/PrometheusEndlineTesterLib/CMakeLists.txt
+++ b/PrometheusEndlineTesterLib/CMakeLists.txt
@@ -1,21 +1,17 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(PrometheusEndlineTesterLib LANGUAGES CXX)
-
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(Qt5 COMPONENTS Core LinguistTools REQUIRED)
 
 
 add_library(PrometheusEndlineTesterLib SHARED
   PrometheusEndlineTesterLib_global.h
-  prometheusendlinetesterlib.cpp
-  prometheusendlinetesterlib.h
+  stlinkdeviceflasher.cpp
+  stlinkdeviceflasher.h
 )
 
 target_link_libraries(PrometheusEndlineTesterLib PRIVATE Qt5::Core)
