started implementation of host test runner

--- a/PrometheusEndlineTesterLib/CMakeLists.txt
+++ b/PrometheusEndlineTesterLib/CMakeLists.txt
@@ -5,17 +5,17 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
-find_package(Qt5 COMPONENTS Core LinguistTools REQUIRED)
+find_package(Qt5 COMPONENTS Core SerialPort REQUIRED)
 
 
 add_library(PrometheusEndlineTesterLib SHARED
   PrometheusEndlineTesterLib_global.h
   stlinkdeviceflasher.cpp
   stlinkdeviceflasher.h
+  mbedhosttestrunner.cpp
+  mbedhosttestrunner.h
 )
 
-target_link_libraries(PrometheusEndlineTesterLib PRIVATE Qt5::Core)
+target_link_libraries(PrometheusEndlineTesterLib PRIVATE Qt5::Core Qt5::SerialPort)
 
 target_compile_definitions(PrometheusEndlineTesterLib PRIVATE PROMETHEUSENDLINETESTERLIB_LIBRARY)
-
-qt5_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
