--- a/PrometheusEndlineTester/PrometheusEndlineTester.ini
+++ b/PrometheusEndlineTester/PrometheusEndlineTester.ini
@@ -5,3 +5,14 @@ eraseArgs=-Q -ME
 resetArgs=-Q -Rst
 pathToBinary=C:\\dev\\src\\PrometheusEndlineTester\\bin\\factory.hex
 
+[serial]
+port=COM13
+baud=115200
+data=8
+parity=2
+stop=1
+flowctrl=0
+
+[ui]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\x7f\0\0\0\xf9\0\0\x4\xc3\0\0\x2\x85\0\0\x2\x80\0\0\x1\x18\0\0\x4\xc2\0\0\x2\x84\0\0\0\0\0\0\0\0\a\x80\0\0\x2\x80\0\0\x1\x18\0\0\x4\xc2\0\0\x2\x84)
+windowstate=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\0\0\0\x2\x43\0\0\x1m\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\0)
