--- a/config.h.in
+++ b/config.h.in
@@ -7,5 +7,6 @@ constexpr const char* PROJECT_VER_MAJOR = "@PROJECT_VERSION_MAJOR@";
 constexpr const char* PROJECT_VER_MINOR = "@PROJECT_VERSION_MINOR@";
 constexpr const char* PROJECT_VER_PATCH = "@PROJECT_VERSION_PATCH@";
 constexpr const char* SETT_FILE_NAME = "@SETTINGS_FILE_NAME@";
+constexpr const char* QSS_FILE_NAME = "@STYLESHEET_FILE_NAME@";
 
 #endif // INCLUDE_GUARD
