--- a/PrometheusEndlineTester/PrometheusEndlineTester.ini
+++ b/PrometheusEndlineTester/PrometheusEndlineTester.ini
@@ -4,7 +4,7 @@ writeArgs=-P
 eraseArgs=-ME
 resetArgs=-Rst
 connectArgs=-c
-pathToBinary=C:\\dev\\src\\PrometheusEndlineTester\\bin\\basic_test.hex
+pathToBinary=C:\\dev\\src\\WdIoT.Firmware.ClientCore\\BUILD\\tests\\WD_CORE_G1\\GCC_ARM-DEBUG\\src\\TESTS\\co1_functional\\endline\\endline.hex
 
 [serial]
 port=COM13
