all test running so far

--- a/PrometheusEndlineTester/PrometheusEndlineTester.ini
+++ b/PrometheusEndlineTester/PrometheusEndlineTester.ini
@@ -4,10 +4,10 @@ writeArgs=-P
 eraseArgs=-ME
 resetArgs=-Rst
 connectArgs=-c
-pathToBinary=C:\\dev\\src\\WdIoT.Firmware.ClientCore\\BUILD\\tests\\WD_CORE_G1\\GCC_ARM-DEBUG\\src\\TESTS\\co1_functional\\endline\\endline.hex
+pathToBinary=C:\\dev\\src\\WdIoT.Firmware.PrometheusV3\\BUILD\\tests\\WD_PROMETHEUS_G1\\GCC_ARM-DEBUG\\src\\TESTS\\pr1_functional\\endline\\endline.hex
 
 [serial]
-port=COM13
+port=COM9
 baud=115200
 data=8
 parity=0
