--- a/PrometheusEndlineTester/PrometheusEndlineTester.ini
+++ b/PrometheusEndlineTester/PrometheusEndlineTester.ini
@@ -5,6 +5,7 @@ eraseArgs=-ME
 resetArgs=-Rst
 connectArgs=-c
 pathToBinary=C:\\dev\\src\\WdIoT.Firmware.PrometheusV3\\BUILD\\tests\\WD_PROMETHEUS_G1\\GCC_ARM-DEBUG\\src\\TESTS\\pr1_functional\\endline\\endline.hex
+pathToTestBinary=C:\\dev\\src\\WdIoT.Firmware.PrometheusV3\\BUILD\\tests\\WD_PROMETHEUS_G1\\GCC_ARM-DEBUG\\src\\TESTS\\pr1_functional\\endline\\endline.hex
 
 [serial]
 port=COM9
