--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "QR-Code-generator"]
 	path = QR-Code-generator
 	url = https://github.com/nayuki/QR-Code-generator.git
+[submodule "mbed-os"]
+	path = mbed-os
+	url = https://github.com/ARMmbed/mbed-os.git
